@@ -31,6 +31,9 @@ Bug Fixes
 * SOLR-6188: Fixed error loading ICU classes with solr. prefix.  Now jars in
   the default sharedLib directory are only loaded once. (Shawn Heisey)
 
+* SOLR-7990: Use of timeAllowed can cause incomplete filters to be cached and incorrect
+  results to be returned on subsequent requests. (Erick Erickson, yonik)
+
 ==================  5.3.0 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release
